Updated Plone version into buildout extends configurarion

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,8 @@
 [buildout]
-extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.1.x.cfg
+extends = https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
 package-name = Products.SimpleAttachment
 package-extras = [test]
+
+[versions]
+# use latest version of setuptools
+setuptools =
