Added RichDocument to instance for easier testing.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,11 @@ extends = https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x
 package-name = Products.SimpleAttachment
 package-extras = [test]
 
+[instance]
+eggs +=
+# Add RichDocument for easier testing.
+    Products.RichDocument
+
 [versions]
 # use latest version of setuptools
 setuptools =
